--- a/Agent_VacCenter_GUI/Agent_VacCenter_GUI.csproj
+++ b/Agent_VacCenter_GUI/Agent_VacCenter_GUI.csproj
@@ -68,9 +68,7 @@
     <Compile Include="entities\PohyblivaEntita.cs" />
     <Compile Include="entities\Pracovnik.cs" />
     <Compile Include="entities\Sestricka.cs" />
-    <Compile Include="AppGUI.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="AppGUI.cs" />
     <Compile Include="AppGUI.Designer.cs">
       <DependentUpon>AppGUI.cs</DependentUpon>
     </Compile>
@@ -82,6 +80,8 @@
     <Compile Include="managers\ManagerRegistracie.cs" />
     <Compile Include="managers\ManagerVakCentra.cs" />
     <Compile Include="managers\ManagerVysetrenia.cs" />
+    <Compile Include="model\BaseAgentPracoviska.cs" />
+    <Compile Include="model\StatistikyPracoviska.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="simulation\EntitySimulacie.cs" />
