--- a/Agent_VacCenter_GUI/Agent_VacCenter_GUI.csproj
+++ b/Agent_VacCenter_GUI/Agent_VacCenter_GUI.csproj
@@ -75,7 +75,9 @@
     <Compile Include="entities\StavovaEntita.cs" />
     <Compile Include="entities\Pracovnik.cs" />
     <Compile Include="entities\Sestricka.cs" />
-    <Compile Include="AppGUI.cs" />
+    <Compile Include="AppGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="AppGUI.Designer.cs">
       <DependentUpon>AppGUI.cs</DependentUpon>
     </Compile>
@@ -93,6 +95,7 @@
     <Compile Include="model\BaseManagerPracoviska.cs" />
     <Compile Include="model\BaseSchedulerObedov.cs" />
     <Compile Include="model\StatistikyPracoviska.cs" />
+    <Compile Include="parameters\ParametreSimulacie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="simulation\EntitySimulacie.cs" />
